# wikimedia

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wikimedia/: server.py
