[project]
name = "wikimedia"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.2", "aiohttp>=3.9.1", "pydantic>=2.5.3" ]

[[project.authors]]
name = "privetin"
email = "81558906+privetin@users.noreply.github.com"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project.scripts]
wikimedia = "wikimedia:main"
